# application-package-patterns

./: .gitignore  .params.yaml  404.html  README.md  Taskfile-local.yaml  Taskfile.yaml  deploy_and_run.sh  index.html  mkdocs.yaml  project.toml  pyproject.toml  t.ipynb  w.cwl
.github/workflows/: build.yaml  docs.yaml
__init__/: index.html
collections/: collection.ipynb  cropped_collection.json  ndi_collection.json  water_bodies_collection.json
cwl-workflow/: pattern-1.cwl  pattern-10.cwl  pattern-11.cwl  pattern-12.cwl  pattern-2.cwl  pattern-3.cwl  pattern-4.cwl  pattern-5.cwl  pattern-6.cwl  pattern-7.cwl  pattern-8.cwl  pattern-9.cwl  test-custom-types.cwl  test-primitives.cwl
docs/: helpers.py  index.md  pattern-1.ipynb  pattern-10.ipynb  pattern-11.ipynb  pattern-12.ipynb  pattern-2.ipynb  pattern-3.ipynb  pattern-4.ipynb  pattern-5.ipynb  pattern-6.ipynb  pattern-7.ipynb  pattern-8.ipynb  pattern-9.ipynb
helpers/: index.html
ogc-processes/: pattern-1.json  pattern-10.json  pattern-11.json  pattern-12.json  pattern-2.json  pattern-3.json  pattern-4.json  pattern-5.json  pattern-6.json  pattern-7.json  pattern-8.json  pattern-9.json
pattern-1/: index.html
pattern-10/: index.html
pattern-11/: index.html
pattern-12/: index.html
pattern-2/: index.html
pattern-3/: index.html
pattern-4/: index.html
pattern-5/: index.html
pattern-6/: index.html
pattern-7/: index.html
pattern-8/: index.html
pattern-9/: index.html
runner/: Dockerfile  pyproject.toml
runner/src/runner/: app.py  crop.py  functions.py  ndi.py  otsu.py  pattern_1.py  pattern_10.py  pattern_11.py  pattern_2.py  pattern_3.py  pattern_4.py  pattern_5.py  pattern_6.py  pattern_7.py  pattern_8.py  pattern_9.py
runner/tests/: helpers.py  test_pattern_1.py  test_pattern_10.py  test_pattern_11.py  test_pattern_12.py  test_pattern_2.py  test_pattern_3.py  test_pattern_4.py  test_pattern_5.py  test_pattern_6.py  test_pattern_7.py  test_pattern_8.py  test_pattern_9.py  tests_cli.py
search/: search_index.json
stage-in/: README.md  pyproject.toml
stage-in/src/stage_in/: app.py
templates/: stage-in-file.cwl  stage-in.cwl  stage-out.cwl  t.yaml
tests/: helpers.py  test_pattern_1.py  test_pattern_2.py  test_pattern_3.py  test_pattern_7.py
tests/templates/: README.md  main.yaml  rules.yaml  stage-in.yaml  stage-out.yaml
vegetation-indexes/: Dockerfile  README.md  pyproject.toml
vegetation-indexes/src/vegetation_indexes/: app.py  crop.py  ndi.py  otsu.py  pattern_1.py  pattern_10.py  pattern_11.py  pattern_2.py  pattern_3.py  pattern_4.py  pattern_5.py  pattern_6.py  pattern_7.py  pattern_8.py  pattern_9.py
