[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "patterns"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Fabrice Brito", email = "fabrice.brito@terradue.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "cwl-wrapper @ git+https://github.com/eoepca/cwl-wrapper@hatch", 
  "nose2", 
  "cwltool"
]

[tool.hatch.metadata]
allow-direct-references = true

[project.urls]
Documentation = "https://github.com/Fabrice Brito/stage-in#readme"
Issues = "https://github.com/Fabrice Brito/stage-in/issues"
Source = "https://github.com/Fabrice Brito/stage-in"

[tool.hatch.version]
path = "patterns/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/stage_in tests}"

[tool.coverage.run]
source_pkgs = ["tests"]
branch = true
parallel = true
omit = [
  "patterns/__about__.py",
]

[tool.coverage.paths]
tests = ["tests", "*/stage-in/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

