[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "runner"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Fabrice Brito", email = "fabrice.brito@terradue.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]


dependencies = [
  "rasterio",
  "click",
  "pystac",
  "loguru",
  "pyproj",
  "shapely",
  "scikit-image",
  "pystac",
  "rio_stac",
  "planetary-computer",
  "requests",
]

[project.urls]
Documentation = "https://github.com/eoap/application-package-patterns#readme"
Issues = "https://github.com/eoap/application-package-patterns/issues"
Source = "https://github.com/eoap/application-package-patterns"

[tool.hatch.envs.prod]
path = "/app/envs/runner"

[project.scripts]
runner = "runner.app:app_group"


[tool.hatch.version]
path = "src/runner/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/runner tests}"

[tool.coverage.run]
source_pkgs = ["runner", "tests"]
branch = true
parallel = true
omit = [
  "src/runner/__about__.py",
]

[tool.coverage.paths]
runner = ["src/runner", "*/runner/src/runner"]
tests = ["tests", "*/runner/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]




